--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
 mongodb+srv://school:school2024@cluster0.cuiz5lm.mongodb.net/reactdb?retryWrites=true&w=majority
 JWT_SECRET = 'somesuperhardStringSecret'
-PORT = 3003
+REACT_APP_API_URL=https://schoolinfo.com
